--- a/about.html
+++ b/about.html
@@ -9,6 +9,7 @@
 <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style-about.css">
+    <link rel="stylesheet" href="css/constantstyle.css">
 
 <!-- Font Awesome -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
@@ -18,9 +19,18 @@
 
 
 
+
 <!-- Hero -->
+<div id=containter>
 <div id="background-img"></div>
  <div id="hero">
+   <div class="photo"><img src="file:///C:/Users/Weston/Desktop/Wesbite-v.3/aboutme/profile/Profile_Pic.jpg">
+     <div>
+         <p>Hi, my name is Weston Watson. I'm from Visalia, California and I'm a senior at Redwood High <br><br>In my free time, I enjoy making YouTube Videos; most of which are focused on school-related topics, however, some are video game playthroughs. I'm also an avid snowboarder, wakeboarder, and dirt bike rider.
+         <br><br> I consider myself to be a hardworking, determined individual with a growth mindset. I attempt to keep work and play balanced and always strive to do my best. I aspire to become a Software/Computer Engineer and help the world through technological innovation.
+         <br><br> "I want to put a ding in the Universe" - Steve Jobs</p>
+   </div>
+   </div>
    <!-- background-overlay -->
    <!-- Navigation -->
        <nav class= "c-navigation">
@@ -39,6 +49,7 @@
     <div id="hero-text">
         <h1><a class="name" href="about.html">Weston R. Watson</a></h>
     </div>
+
  </div>
 
 
@@ -52,6 +63,7 @@
 </div>
 </nav>
 
+</div>
 </div>
 
 
