--- a/about.html
+++ b/about.html
@@ -24,13 +24,13 @@
 <div id=containter>
 <div id="background-img"></div>
  <div id="hero">
-   <div class="photo"><img src="profile\Profile_Pic.jpg">
-     <div>
-         <p>Hi, my name is Weston Watson. I'm from Visalia, California and I'm a senior at Redwood High <br><br>In my free time, I enjoy making YouTube Videos; most of which are focused on school-related topics, however, some are video game playthroughs. I'm also an avid snowboarder, wakeboarder, and dirt bike rider.
-         <br><br> I consider myself to be a hardworking, determined individual with a growth mindset. I attempt to keep work and play balanced and always strive to do my best. I aspire to become a Software/Computer Engineer and help the world through technological innovation.
-         <br><br> "I want to put a ding in the Universe" - Steve Jobs</p>
+   <div class="photo"><img src="https://pbs.twimg.com/profile_images/1014413117701349376/nj6Lmmq9_400x400.jpg">
    </div>
-   </div>
+   <div>
+       <p>Hi, my name is Weston Watson. I'm from Visalia, California and I'm a senior at Redwood High <br><br>In my free time, I enjoy making YouTube videos; most of which are focused on school-related topics, however, some are video game playthroughs. I'm also an avid snowboarder, wakeboarder, and dirt bike rider.
+       <br><br> I consider myself to be a hardworking, determined individual with a growth mindset. I attempt to keep work and play balanced, and always strive to do my best. I aspire to become a Software/Computer Engineer and help the world through technological innovation.
+       <br><br> "I want to put a ding in the universe." - Steve Jobs</p>
+ </div>
    <!-- background-overlay -->
    <!-- Navigation -->
        <nav class= "c-navigation">
