--- a/portfolio.html
+++ b/portfolio.html
@@ -31,8 +31,8 @@
            <ul id="links">
                <li><a href="index.html">home</a></li>
                <li><a href="about.html">about</a></li>
-               <li><a href="portfolio.html">portfolio</a></li>
-               <li><a class="YouTube" href="https://www.youtube.com/channel/UCecDJqhvdpC3u2m7LAHJjCw">YouTube</a></li>
+               <li><h class="active">portfolio</h></li>
+               <li><a class="YouTube" href="https://www.youtube.com/channel/UCecDJqhvdpC3u2m7LAHJjCw">You</a><a class="YouTube" href="https://www.youtube.com/channel/UCecDJqhvdpC3u2m7LAHJjCw">Tube</a></li>
            </ul>
        </nav>
 
