--- a/about.html
+++ b/about.html
@@ -39,9 +39,9 @@
          <i id="close" class="fas fa-times"></i>
            <ul id="links">
                <li><a href="index.html">home</a></li>
-               <li><a href="about.html">about</a></li>
+               <li><h class="active">about</h></li>
                <li><a href="portfolio.html">portfolio</a></li>
-               <li><a class="YouTube" href="https://www.youtube.com/channel/UCecDJqhvdpC3u2m7LAHJjCw">YouTube</a></li>
+               <li><a class="YouTube" href="https://www.youtube.com/channel/UCecDJqhvdpC3u2m7LAHJjCw">You</a><a class="YouTube" href="https://www.youtube.com/channel/UCecDJqhvdpC3u2m7LAHJjCw">Tube</a></li>
            </ul>
        </nav>
 
